# nograd

./: .gitignore  CMakeLists.txt  index.cfg  main.cpp  readme.md
config_reader/: config_reader.cpp  config_reader.hpp  string_tools.h
draft/: main.py  mnist.py
models/: mnist_net.h
ng/: function.hpp  ops.cpp  ops.hpp  optim.hpp  tensor.cpp  tensor.hpp  tensor2.hpp
test/: CMakeLists.txt  main.cpp
